--- a/sandbox/simple-client-side-tracking.html
+++ b/sandbox/simple-client-side-tracking.html
@@ -15,6 +15,7 @@
 
     <h1>Simple client side tracking demo</h1>
     <p>This is a simple client side tracking demo, to learn how it works.</p>
+    <p>This page gets blocked by Adblockers. (Tested in Firefox with uBlock Origin.)</p>
 
     <div>
         <button type="button" onclick="demoEvent();">Demo event</button>
