--- a/sandbox/simple-client-side-tracking-with-proxy.html
+++ b/sandbox/simple-client-side-tracking-with-proxy.html
@@ -11,6 +11,7 @@
 
     <h1>Simple client side tracking with proxy demo</h1>
     <p>This is a simple client side tracking demo using a proxy, to learn how it works.</p>
+    <p>It doesn't get blocked. Tested in Firefox with uBlock Origin and Brave.</p>
 
     <div>
         <button type="button" onclick="demoEvent();">Demo event</button>
