--- a/sandbox/simple-client-side-tracking.html
+++ b/sandbox/simple-client-side-tracking.html
@@ -16,6 +16,7 @@
     <h1>Simple client side tracking demo</h1>
     <p>This is a simple client side tracking demo, to learn how it works.</p>
     <p>The Mixpanel request gets blocked by Adblockers. Tested in Firefox with uBlock Origin.</p>
+    <p>Page size: 20.8 kB</p>
 
     <div>
         <button type="button" onclick="demoEvent();">Demo event</button>
