--- a/sandbox/simple-tag-manager.html
+++ b/sandbox/simple-tag-manager.html
@@ -12,6 +12,7 @@
     <h1>Simple client side with Google Tag Manager</h1>
     <p>This is a simple client side tag manager demo, to learn how it works.</p>
     <p>The GTM script is replaced by uBlock Origin. In Brave it's replaced by uBlock Origin and in Firefox doesn't show on the dev tools.</p>
+    <p>Page size: 95 kB</p>
 
     <div>
         <button type="button" onclick="dataLayer.push({'event': 'Demo event', 'Demo propriety': 'ExampleDL' });">Demo event</button>
