Update README and client side with custom loader

--- a/sandbox/client-side-tag-manager-with-custom-loader.html
+++ b/sandbox/client-side-tag-manager-with-custom-loader.html
@@ -10,8 +10,8 @@
 <body>
 
     <h1>Client side Google Tag Manager with custom loader</h1>
-    <p>This is a test to learn how it works. For now no events or tags exist in the </p>
-    <p>The GTM-KM925DBR is from a cient side container. The server sice container should be GTM-PC2TKKQ9.</p>
+    <p>This is a test to learn how it works. For now no events or tags exist in the client side GTM.</p>
+    <p>The <a href="https://tagmanager.google.com/#/container/accounts/553476035/containers/187017593/workspaces/2" target="_blank">GTM-KM925DBR</a> is from a cient side container. The server sice container should be <a href="https://tagmanager.google.com/#/container/accounts/553476035/containers/187038479/workspaces/2" target="_blank">GTM-PC2TKKQ9</a>.</p>
     <p>The tracking domain is sst-test.greenpeace.es</p>
     <p><code>dataLayer</code> was replaced by <code>greenpeaceLayer</code>, to future-prof it.</p>
 
