Ident the dataLayer code so it's easier to read

--- a/sandbox/client-side-tag-manager-with-custom-loader.html
+++ b/sandbox/client-side-tag-manager-with-custom-loader.html
@@ -22,8 +22,11 @@
 
     <div>
         <button type="button"
-            onclick="greenpeaceLayer.push({'event': 'Demo event', 'Demo propriety': 'ExampleDL' });">Demo
-            event</button>
+            onclick="greenpeaceLayer.push({
+                'event': 'Demo event', 
+                'Demo propriety': 'ExampleDL' });">
+                Demo event
+            </button>
     </div>
 
 </body>
