--- a/sandbox/simple-tag-manager.html
+++ b/sandbox/simple-tag-manager.html
@@ -25,7 +25,12 @@
     <p>Page size: 95 kB</p>
 
     <div>
-        <button type="button" onclick="dataLayer.push({'event': 'Demo event', 'Demo propriety': 'ExampleDL' });">Demo event</button>
+        <button type="button" 
+        onclick="dataLayer.push({
+            'event': 'Demo event', 
+            'Demo propriety': 'ExampleDL' });">
+            Demo event
+        </button>
     </div>
 
 </body>
