--- a/sandbox/client-side-tag-manager-with-custom-loader.html
+++ b/sandbox/client-side-tag-manager-with-custom-loader.html
@@ -47,7 +47,7 @@
         <button type="button"
             onclick="deleteCookie('stape_mixpanel_initial_referrer','.greenpeace.es');">
                 Delete stape_mixpanel_initial_referrer cookie manuallly
-            </button>
+            </button> - This will move to client side GTM.
     </div>
 
 </body>
