--- a/index.html
+++ b/index.html
@@ -1199,6 +1199,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                 "form_goal" : "Newsletter",
                                 "form_plugin" : "none"
                             });
+
+                            // TODO Add Mixpanel event to alias
+
+                            // TODO ADD conversion event
                                                         
                             if ( typeof(hj) === "function" && cookieTrackingManager.canItrack("analytics") ) {
                                 window.hj('identify', userId, {
