Add Mixpanel test container and link to testing page

--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
             }
         </script>
         <!-- / Statistics I -->
+
+        <!-- Mixpanel container -->
+        <script>
+            (function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://sst-test.greenpeace.es/olpjosud.js?st=' + i + dl + ''; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'greenpeaceLayer', 'KM925DBR');
+        </script>
+        <!-- /Mixpanel container -->
+
             </head>
 <body class="home page-template-default page page-id-914" data-template="base.twig">
 <div id="page" class="home page page ">
