--- a/index.html
+++ b/index.html
@@ -1219,8 +1219,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
                             // Adds the alias to the user in Mixpanel
                             greenpeaceLayer.push({
-                                'event' : 'identify',
-                                'alias' : sha256(email.trim().toLowerCase())
+                                'event' : 'user_identified',
+                                'distinct_id' : sha256(email.trim().toLowerCase())
                             });
 
                             // Sends form submit event to Mixpanel
