Add hazte socio page to test inter-page nav

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                                             </li>
                                                                                                                                                                                                                                                                         <li class="section-header-item nav-item d-lg-none text-center bg-orange button-3 ">
                                 <a class="nav-link py-3"
-                                   href="/es/que-puedes-hacer-tu/hazte-socio/">HAZTE SOCIO/A
+                                   href="hazte-socio.html">HAZTE SOCIO/A
                                 </a>
                         </li>
                                                                                                                                     <li id="languages-responsive"
@@ -423,7 +423,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         </div>
                                     <div class="container-fluid fixed-bottom">
                 <div class="row d-lg-none text-center bg-orange button-3">
-                                                                                                                                                                                                                                            <a id="boton_rojo_home" href="/es/que-puedes-hacer-tu/hazte-socio/" class="w-100 py-3">HAZTE SOCIO/A</a>
+                                                                                                                                                                                                                                            <a id="boton_rojo_home" href="hazte-socio.html" class="w-100 py-3">HAZTE SOCIO/A</a>
                                                                                                                                     </div>
             </div>
             </div>
@@ -451,7 +451,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                                                                                     <a id="menu-item-que-puedes-hacer-tu" class="nav-link p-3"                                        href="https://es.greenpeace.org/es/que-puedes-hacer-tu/">Qué puedes hacer tú</a>
                                                                 </li>
                                                                                                 <li class="section-header-item outstanding-link nav-item d-flex align-items-center">
-                                                                                                    <a id="menu-item-hazte-socio" class="nav-link p-3" target="_self"                                       href="/es/que-puedes-hacer-tu/hazte-socio/">HAZTE SOCIO/A</a>
+                                                                                                    <a id="menu-item-hazte-socio" class="nav-link p-3" target="_self"                                       href="hazte-socio.html">HAZTE SOCIO/A</a>
                                                                 </li>
                                                                                                 <li id="menu-noticias" class="section-header-item nav-item d-flex align-items-center ">
                                                                                                     <a id="menu-item-noticias" class="nav-link p-3"                                        href="https://es.greenpeace.org/es/noticias/">Actualidad</a>
@@ -809,7 +809,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                         <h5>¡ÚNETE A<br> GREENPEACE!</h5>
                         <p class="custom-1 c-black">Ayúdanos a seguir defendiendo el planeta de forma eficaz e independiente.</p>
                         <p class="link link-button m-0 button-3"><a
-                                    href="/es/que-puedes-hacer-tu/hazte-socio/"
+                                    href="hazte-socio.html"
                                                                         class="p-3 d-block">HAZTE SOCIO</a></p>
                     </div>
                 </div>
@@ -952,7 +952,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                 <div class="cifras-donation">
                                     <h2 class="h3">Ayúdanos a seguir siendo <span style="color:#2AB20B;">100% independientes</span></h2>
                                     <p class="tck-text">En Greenpeace no aceptamos ni un euro de gobiernos, partidos políticos o empresas. Todo lo que hacemos es gracias a la contribución de nuestros socios y socias, que buscan proteger el medio ambiente para que las generaciones futuras puedan disfrutar de un mundo más verde y en paz.</p><br>
-                                    <div class="btns-donation"><a href="https://es.greenpeace.org/es/que-puedes-hacer-tu/hazte-socio/#importe-a" class="tck-btn">9€</a><a href="https://es.greenpeace.org/es/que-puedes-hacer-tu/hazte-socio/#importe-b" class="tck-btn">12€</a><a href="https://es.greenpeace.org/es/que-puedes-hacer-tu/hazte-socio/#importe-c" class="tck-btn">15€</a><a href="https://es.greenpeace.org/es/que-puedes-hacer-tu/hazte-socio/#importe-o" class="tck-btn">Otro</a></div>
+                                    <div class="btns-donation"><a href="hazte-socio.html/#importe-a" class="tck-btn">9€</a><a href="hazte-socio.html/#importe-b" class="tck-btn">12€</a><a href="hazte-socio.html/#importe-c" class="tck-btn">15€</a><a href="hazte-socio.html/#importe-o" class="tck-btn">Otro</a></div>
                                 </div>
                                 </div>
                                 </div>
