Rename home to view it in GA4 GTM

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
         <title>
-                            Greenpeace España - ES | Greenpeace España
+                            Home page - Greenpeace España
                     </title>
                     
     <script>
