--- a/sandbox/client-side-tag-manager-with-custom-loader.html
+++ b/sandbox/client-side-tag-manager-with-custom-loader.html
@@ -7,12 +7,12 @@
     <title>Client side Google Tag Manager with custom loader</title>
     <!-- Google Tag Manager -->
     <script>
-        (function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://sst-test.greenpeace.es/olpjosud.js?st=' + i + dl + ''; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'greenpeaceLayer', 'KM925DBR');
+        (function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://sst-test.greenpeace.es/olpjosud.js?st=' + i + dl + ''; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'KM925DBR');
     </script>
     <!-- End Google Tag Manager -->
     <script>
-            window.greenpeaceLayer = window.greenpeaceLayer || [];
-            function gtag(){greenpeaceLayer.push(arguments);}
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
             gtag('consent', 'default', {
               'ad_storage': 'denied', // V1
               'analytics_storage': 'denied', // V1
@@ -33,11 +33,11 @@
     <p>This is a test to learn how it works. For now no events or tags exist in the client side GTM.</p>
     <p>The <a href="https://tagmanager.google.com/#/container/accounts/553476035/containers/187017593/workspaces/2" target="_blank">GTM-KM925DBR</a> is from a cient side container. The server sice container should be <a href="https://tagmanager.google.com/#/container/accounts/553476035/containers/187038479/workspaces/2" target="_blank">GTM-PC2TKKQ9</a>.</p>
     <p>The tracking domain is sst-test.greenpeace.es</p>
-    <p><code>dataLayer</code> was replaced by <code>greenpeaceLayer</code>, to future-prof it.</p>
+    <p><code>dataLayer</code> was replaced by <code>dataLayer</code>, to future-prof it.</p>
 
     <div>
         <button type="button"
-            onclick="greenpeaceLayer.push({
+            onclick="dataLayer.push({
                 'event': 'Demo event', 
                 'Demo propriety': 'ExampleDL' });">
                 Demo event
