Add logic to generate uuid when the cookie doesn't exist

--- a/hazte-socio.html
+++ b/hazte-socio.html
@@ -150,6 +150,11 @@
                 }
                 return uuid;
             }
+            if  (getCookie('gp_anonymous_id')) {
+                window.uuid = getCookie('gp_anonymous_id');
+            } else {
+                window.uuid = generateUUID();
+            }
         </script>
         <!-- /Mixpanel functions -->
 
