If the user has deleted the cookie but we can track, add the uuid value as the cookie

--- a/hazte-socio.html
+++ b/hazte-socio.html
@@ -154,6 +154,11 @@
                 window.uuid = getCookie('gp_anonymous_id');
             } else {
                 window.uuid = generateUUID();
+                window.addEventListener("load", function(){
+                    if (cookieTrackingManager.canItrack("analytics")){
+                        setCookie("gp_anonymous_id", window.uuid, 365 * 2);
+                    }
+                });
             }
         </script>
         <!-- /Mixpanel functions -->
