Add page_type propriety

--- a/hazte-socio.html
+++ b/hazte-socio.html
@@ -169,6 +169,12 @@
         </script>
         <!-- /Mixpanel container -->
 
+        <!-- Page type, based on the template used -->
+        <script>
+            window.googleTrackingConfig.page_type = "Donation Page";
+        </script>
+        <!-- /Page type, based on templates -->
+
         <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 		
 	</head>
