--- a/index.html
+++ b/index.html
@@ -362,6 +362,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         </script>
         <!-- /Mixpanel container -->
 
+        <!-- Page type, based on the template used -->
+        <script>
+            window.googleTrackingConfig.page_type = "Homepage";
+        </script>
+        <!-- /Page type, based on templates -->
+
             </head>
 <body class="home page-template-default page page-id-914" data-template="base.twig">
 <div id="page" class="home page page ">
