--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                 dataLayer.push({
                                     'event' : 'user_identified',
                                     'distinct_id' : sha256(email.trim().toLowerCase()),
-                                    'registration_type' : 'Newsletter',
+                                    'registration_type' : 'Lead',
                                     'consent_analytics' : cookieTrackingManager.canItrack("analytics").toString().toUpperCase(),
                                     'consent_segmentation' : cookieTrackingManager.canItrack("segmentation").toString().toUpperCase(),
                                     'consent_marketing' : cookieTrackingManager.canItrack("consent_marketing").toString().toUpperCase(),
