Improvements to the use of gtag

--- a/sandbox/using-gtag.html
+++ b/sandbox/using-gtag.html
@@ -50,7 +50,7 @@
 
     <div>
         <button type="button"
-            onclick="gtag('event','Demo event', { 'send_to': 'G-VEG9B9WWG6', 'Demo propriety': 'ExampleDL' });">
+            onclick="gtag('event','Demo event', { 'send_to': 'G-VEG9B9WWG6', 'Demo propriety': 'ExampleDL', 'nro' : 'Spain' });">
                Send Demo event
             </button>
     </div>
