--- a/sandbox/using-gtag-2.html
+++ b/sandbox/using-gtag-2.html
@@ -61,7 +61,7 @@
 
     <div>
         <button type="button"
-            onclick="gtag('event','Demo event', { 'send_to': 'G-VEG9B9WWG6', 'Demo propriety': 'ExampleDL' }); console.log('Demo event')">
+            onclick="gtag('event','Demo event', { 'send_to': 'G-VEG9B9WWG6', 'Demo propriety': 'ExampleDL', 'nro' : 'Spain' });">
                Send Demo event
             </button>
     </div>
