Fix setCookie issue

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
         <!-- Mixpanel functions -->
         <script>
-            const setCookie = function setCookie(cname, cvalue, exdays) {
+            const setCookie = function (cname, cvalue, exdays) {
                 var d = new Date();
                 d.setTime(d.getTime() + (exdays*24*60*60*1000));
                 var expires = "expires="+ d.toUTCString();
