--- a/hazte-socio.html
+++ b/hazte-socio.html
@@ -110,7 +110,7 @@
 
         <!-- Mixpanel functions -->
         <script>
-            const setCookie = function setCookie(cname, cvalue, exdays) {
+            const setCookie = function (cname, cvalue, exdays) {
                 var d = new Date();
                 d.setTime(d.getTime() + (exdays*24*60*60*1000));
                 var expires = "expires="+ d.toUTCString();
